test/corpus/comments.txt
================================================================================
comment in empty block body
================================================================================

block {
  # foo
}

--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (comment))))

================================================================================
multiline comment in empty block body
================================================================================

block {
  /*
    foo
  */
}

--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (comment))))

================================================================================
multiline comment above attribute in block body
================================================================================

block {
  /*
    foo
  */
  foo = bar
}

--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (comment)
      (body
        (attribute
          (identifier)
          (identifier))))))

================================================================================
comment above first attribute in block body
================================================================================

block {
  # foo
  foo = bar
}

--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (comment)
      (body
        (attribute
          (identifier)
          (identifier))))))

================================================================================
comment after last attribute in block body
================================================================================

block {
  foo = bar
  # foo
}

--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (body
        (attribute
          (identifier)
          (identifier)))
      (comment))))

================================================================================
comment between attributes in block body
================================================================================

block {
  foo = bar
  # foo
  baz = quz
}

--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (body
        (attribute
          (identifier)
          (identifier))
        (comment)
        (attribute
          (identifier)
          (identifier))))))

================================================================================
comment at end of file
================================================================================

# foo
--------------------------------------------------------------------------------

(config_file
  (comment))
