test/corpus/for_expressions.txt
================================================================================
for tuple expression
================================================================================

foo = [for v in ["a", "b"]: v]

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (for_tuple_expr
        (for_intro
          (identifier)
          (tuple
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))))
        (identifier)))))

================================================================================
for tuple expression with index
================================================================================

foo = [for i, v in ["a", "b"]: i]

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (for_tuple_expr
        (for_intro
          (identifier)
          (identifier)
          (tuple
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))))
        (identifier)))))

================================================================================
for tuple expression with predicate
================================================================================

foo = [for i, v in ["a", "b", "c"]: v if pred(i)]

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (for_tuple_expr
        (for_intro
          (identifier)
          (identifier)
          (tuple
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))))
        (identifier)
        (function_call
          (identifier)
          (identifier))))))

================================================================================
for object expression
================================================================================

foo = {for i, v in ["a", "b"]: v => i}

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (for_object_expr
        (for_intro
          (identifier)
          (identifier)
          (tuple
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))))
        (identifier)
        (identifier)))))

================================================================================
for object expression 2
================================================================================

foo = {for i, v in ["a", "b"]: v => i...}

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (for_object_expr
        (for_intro
          (identifier)
          (identifier)
          (tuple
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))
            (quoted_template
              (quoted_template_start)
              (template_literal)
              (quoted_template_end))))
        (identifier)
        (identifier)
        (ellipsis)))))
