test/corpus/real_world.txt
================================================================================
example 1
================================================================================

provider "kubernetes" {
  host                   = data.aws_eks_cluster.cluster.endpoint
  token                  = data.aws_eks_cluster_auth.cluster.token
  cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
}

--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (body
        (attribute
          (identifier)
          (get_attr
            (get_attr
              (get_attr
                (identifier)
                (identifier))
              (identifier))
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (get_attr
              (get_attr
                (identifier)
                (identifier))
              (identifier))
            (identifier)))
        (attribute
          (identifier)
          (function_call
            (identifier)
            (get_attr
              (legacy_index
                (get_attr
                  (get_attr
                    (get_attr
                      (identifier)
                      (identifier))
                    (identifier))
                  (identifier))
                (legacy_index_key))
              (identifier))))))))

================================================================================
example 2
================================================================================

locals {
  storage_account_container_name           = var.storage_account_container_name == "" ? azurerm_storage_container.storage_account_container[0].name : var.storage_account_container_name
  bootstrap_storage_account_container_name = var.bootstrap_storage_account_container_name == "" ? azurerm_storage_container.bootstrap_storage_account_container[0].name : var.bootstrap_storage_account_container_name
}

resource "azurerm_storage_container" "storage_account_container" {
  count = var.storage_account_container_name == "" ? 1 : 0

  name                  = var.storage_account_name
  storage_account_name  = var.storage_account_name
  container_access_type = "private"
}

resource "azurerm_storage_container" "bootstrap_storage_account_container" {
  count = var.bootstrap_storage_account_container_name == "" ? 1 : 0

  name                  = var.bootstrap_storage_account_name
  storage_account_name  = var.bootstrap_storage_account_name
  container_access_type = "private"
}

resource "azurerm_storage_blob" "bootstrap_license" {
  count = var.bootstrap_storage_account_container_name == "" ? 1 : 0

  source                 = var.tfe_license_filepath
  name                   = var.tfe_license_name
  storage_account_name   = var.bootstrap_storage_account_name
  storage_container_name = azurerm_storage_container.bootstrap_storage_account_container[0].name
  type                   = "Page"
}

resource "azurerm_storage_blob" "proxy_cert" {
  count = var.proxy_cert_name != "" && var.bootstrap_storage_account_container_name == "" ? 1 : 0

  source                 = var.proxy_cert_path
  name                   = var.proxy_cert_name
  storage_account_name   = var.bootstrap_storage_account_name
  storage_container_name = azurerm_storage_container.bootstrap_storage_account_container[0].name
  type                   = "Block"
}
--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (body
        (attribute
          (identifier)
          (conditional
            (binary_operation
              (get_attr
                (identifier)
                (identifier))
              (quoted_template
                (quoted_template_start)
                (quoted_template_end)))
            (get_attr
              (bracket_index
                (get_attr
                  (identifier)
                  (identifier))
                (numeric_lit))
              (identifier))
            (get_attr
              (identifier)
              (identifier))))
        (attribute
          (identifier)
          (conditional
            (binary_operation
              (get_attr
                (identifier)
                (identifier))
              (quoted_template
                (quoted_template_start)
                (quoted_template_end)))
            (get_attr
              (bracket_index
                (get_attr
                  (identifier)
                  (identifier))
                (numeric_lit))
              (identifier))
            (get_attr
              (identifier)
              (identifier))))))
    (block
      (identifier)
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (body
        (attribute
          (identifier)
          (conditional
            (binary_operation
              (get_attr
                (identifier)
                (identifier))
              (quoted_template
                (quoted_template_start)
                (quoted_template_end)))
            (numeric_lit)
            (numeric_lit)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (quoted_template
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))))
    (block
      (identifier)
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (body
        (attribute
          (identifier)
          (conditional
            (binary_operation
              (get_attr
                (identifier)
                (identifier))
              (quoted_template
                (quoted_template_start)
                (quoted_template_end)))
            (numeric_lit)
            (numeric_lit)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (quoted_template
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))))
    (block
      (identifier)
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (body
        (attribute
          (identifier)
          (conditional
            (binary_operation
              (get_attr
                (identifier)
                (identifier))
              (quoted_template
                (quoted_template_start)
                (quoted_template_end)))
            (numeric_lit)
            (numeric_lit)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (bracket_index
              (get_attr
                (identifier)
                (identifier))
              (numeric_lit))
            (identifier)))
        (attribute
          (identifier)
          (quoted_template
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))))
    (block
      (identifier)
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (body
        (attribute
          (identifier)
          (conditional
            (binary_operation
              (binary_operation
                (get_attr
                  (identifier)
                  (identifier))
                (quoted_template
                  (quoted_template_start)
                  (quoted_template_end)))
              (binary_operation
                (get_attr
                  (identifier)
                  (identifier))
                (quoted_template
                  (quoted_template_start)
                  (quoted_template_end))))
            (numeric_lit)
            (numeric_lit)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (identifier)
            (identifier)))
        (attribute
          (identifier)
          (get_attr
            (bracket_index
              (get_attr
                (identifier)
                (identifier))
              (numeric_lit))
            (identifier)))
        (attribute
          (identifier)
          (quoted_template
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))))))

================================================================================
example 3
================================================================================

private_key_pem = element(tls_private_key.server.*.private_key_pem, count.index)

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (function_call
        (identifier)
        (get_attr
          (attr_splat
            (get_attr
              (identifier)
              (identifier)))
          (identifier))
        (get_attr
          (identifier)
          (identifier))))))

================================================================================
example 4
================================================================================

locals {
  bootstrapping_host = "${var.tectonic_azure_private_cluster ?
    module.vnet.master_private_ip_addresses[0] :
    module.vnet.api_fqdn}"
}

--------------------------------------------------------------------------------

(config_file
  (body
    (block
      (identifier)
      (body
        (attribute
          (identifier)
          (quoted_template
            (quoted_template_start)
            (template_interpolation
              (template_interpolation_start)
              (conditional
                (get_attr
                  (identifier)
                  (identifier))
                (bracket_index
                  (get_attr
                    (get_attr
                      (identifier)
                      (identifier))
                    (identifier))
                  (numeric_lit))
                (get_attr
                  (get_attr
                    (identifier)
                    (identifier))
                  (identifier)))
              (template_interpolation_end))
            (quoted_template_end)))))))
